[gd_scene load_steps=8 format=1]

[ext_resource path="res://rcos_core/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://modules/io_ports_connector/io_ports_connector_gui.gd" type="Script" id=2]
[ext_resource path="res://rcos_core/lib/scroller_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://rcos_core/lib/scroller_input_area.tscn" type="PackedScene" id=4]
[ext_resource path="res://rcos_core/lib/node_selector.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.199219, 0.199219, 0.199219, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="GDScript" id=2]

script/source = "extends VBoxContainer

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass

func _input_event(event):
	prints(get_name(), \"_input_event\", event)
	"

[node name="io_ports_connector_gui" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 2 )

[node name="vsplit" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 0
alignment = 0

[node name="buttons" type="HBoxContainer" parent="vsplit"]

editor/display_folded = true
rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 40.0
custom_constants/separation = 0
alignment = 0

[node name="add_connection_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 26.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add"
flat = false

[node name="toggle_connection_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 0.0
margin/right = 66.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Toggle"
flat = false

[node name="remove_connection_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 66.0
margin/top = 0.0
margin/right = 112.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Remove"
flat = false

[node name="save_button" type="Button" parent="vsplit/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 112.0
margin/top = 0.0
margin/right = 143.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="items_container" parent="vsplit" instance=ExtResource( 3 )]

anchor/right = 0
anchor/bottom = 0
size_flags/horizontal = 3
size_flags/vertical = 3
margin/top = 40.0
margin/right = 240.0
margin/bottom = 400.0
clip_content = true

[node name="items" type="VBoxContainer" parent="vsplit/items_container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 0
alignment = 0
script/script = SubResource( 2 )

[node name="scroller_input_area" parent="vsplit/items_container" instance=ExtResource( 4 )]

[node name="output_port_selector" parent="." instance=ExtResource( 5 )]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
margin/right = 0.0
margin/bottom = 0.0
root_path = NodePath("/root/data_router/output_ports")

[node name="items_scroller" parent="output_port_selector"]

clip_content = true

[node name="scroller" parent="output_port_selector/current_node_path"]

clip_content = true

[node name="input_port_selector" parent="." instance=ExtResource( 5 )]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
margin/right = 0.0
margin/bottom = 0.0
root_path = NodePath("/root/data_router/input_ports")


[editable path="output_port_selector"]
